# rpi-trader

./: .env.example  .gitignore  Changes Summary.md  Deployment Guide for RPi 5.md  MT5_BRIDGE_SERVICE.py  Platform Overview.md  README.md  RPI Trader - Deployment Guide for Raspberry Pi 5.md  market_service.py  pyproject.toml
apps/bot_gateway/: __init__.py  bot.py  handlers.py  main.py  pyproject.toml
apps/execution_worker/: __init__.py  execution_service.py  main.py  pyproject.toml
apps/finance_worker/: __init__.py  api.py  finance_service.py  main.py  pyproject.toml
apps/market_worker/: __init__.py  main.py  market_service.py  pyproject.toml
apps/scheduler/: __init__.py  api.py  main.py  pyproject.toml  scheduler.py
docs/: BVM_ANALYSIS.md  BVM_INTEGRATION_GUIDE.md  CHANGES_SUMMARY.md  CORRECTED_FIX.md  DEPLOYMENT_GUIDE.md  FINAL_FIX_203_ERROR.md  IMPORT_FIX.md  MT5_VM_INTEGRATION.md  PYDANTIC_FIX.md  QUICK_FIX.md  RESEARCH_FINDINGS.md  RPI Trader - Modular Automation and Day Trading Platform.md  TROUBLESHOOTING_203_ERROR.md
libs/: __init__.py
libs/broker/: __init__.py  base.py  mt5_client.py
libs/core/: __init__.py  config.py  security.py
libs/data/: __init__.py  models.py  repository.py
libs/data_sources/: alpha_vantage.py  data_collector.py  yahoo_finance.py
libs/models/: base.py
libs/signals/: __init__.py  base.py  processor.py  technical.py
new_project/: pyproject.toml
new_project/apps/bot_gateway/: api.py  bot.py  handlers.py  main.py  pyproject.toml
new_project/apps/execution_worker/: api.py  execution_service.py  main.py  pyproject.toml
new_project/apps/finance_worker/: main.py  pyproject.toml
new_project/apps/market_worker/: api.py  main.py  market_service.py  pyproject.toml
new_project/apps/scheduler/: main.py  pyproject.toml
new_project/libs/broker/: bvm_mt5_client.py
new_project/libs/core/: config.py  logging.py
new_project/libs/data/: __init__.py  models.py  repository.py
new_project/libs/data_sources/: __init__.py  finnhub.py
new_project/libs/models/: __init__.py  simple_models.py
new_project/scripts/: daily-summary.sh  deploy.sh  deploy_bvm.sh  health-check.sh  trade-report.sh
new_project/services/: rpi-trader-bot-gateway.service  rpi-trader-execution-worker.service  rpi-trader-finance-worker.service  rpi-trader-market-worker.service  rpi-trader-scheduler.service
scripts/: daily-summary.sh  deploy.sh  health-check.sh  system-update.sh  trade-report.sh
services/: rpi-trader-bot-gateway.service  rpi-trader-execution-worker.service  rpi-trader-finance-worker.service  rpi-trader-market-worker.service  rpi-trader-scheduler.service
