[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rpi-trader-market-worker"
version = "0.1.0"
description = "Market Worker Service for RPI Trader"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "websockets>=11.0.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "structlog>=23.2.0",
    "ta>=0.10.2",
    "scikit-learn>=1.3.0",
]

[project.scripts]
market-worker = "market_worker.main:main"

