[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rpi-trader-scheduler"
version = "0.1.0"
description = "Scheduler Service for RPI Trader"
dependencies = [
    "apscheduler>=3.10.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "structlog>=23.2.0",
]

[project.scripts]
scheduler = "scheduler.main:main"

